backup/httpr/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: grafana
  name: grafana
  namespace: httpr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/otel-default: "true"
        io.kompose.service: grafana
    spec:
      containers:
        - env:
            - name: GF_AUTH_ANONYMOUS_ENABLED
              value: "true"
            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
              value: Admin
            - name: GF_AUTH_DISABLE_LOGIN_FORM
              value: "true"
            - name: GF_FEATURE_TOGGLES_ENABLE
              value: traceqlEditor
            - name: GF_SERVER_HTTP_PORT
              value: "3002"
          image: grafana/grafana:9.4.3
          name: grafana
          ports:
            - containerPort: 3002
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
      restartPolicy: Always
      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
status: {}
