backup/httpr/otel-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-default
  namespace: httpr
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/otel-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/otel-default: "true"
